k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: talent-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          # image: 208851973284.dkr.ecr.ap-south-1.amazonaws.com/b17:backend
          image: IMAGE_BACKEND
          ports:
            - containerPort: 5000
