k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: talent-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # image: 208851973284.dkr.ecr.ap-south-1.amazonaws.com/b17:frontend
          image: IMAGE_FRONTEND
          
          ports:
            - containerPort: 3000
      nodeaffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          nodeSelectorTerms:
            - matchExpressions:
                - key: size 
                  operator: In
                  values:
                    - medium
                    - large
